INCLUDES = 
METASOURCES = AUTO
include_HEADERS = yakeByteSwapInputStreamDecorator.h \
	yakeByteSwapOutputStreamDecorator.h yakeConfigFile.h yakeCriticalSection.h yakeDataChunk.h \
	yakeDebugLogAppender.h yakeDebugOutputStream.h yakeException.h yake.h \
	yakeInputStreamDecorator.h yakeInputStream.h yakeLibrary.h yakeLock.h yakeLog.h \
	yakeMimeTypeManager.h yakeMovable.h yakeOutputStreamDecorator.h yakeOutputStream.h yakePCH.h \
	yakePlatform.h yakePlugin.h yakePrerequisites.h yakeProcessor.h yakeResource.h \
	yakeSerializable.h yakeString.h yakeTimer.h yakeUniqueId.h yakeUniqueName.h yakeVersion.h
SUBDIRS = prerequisites templates mpl native math
