INCLUDES = -I$(top_srcdir)/. -I$(top_srcdir)/dependencies \
	-I$(top_srcdir)/dependencies/ttl $(all_includes)

lib_LTLIBRARIES = libyappModel.la
libyappModel_la_SOURCES = yakeComplexModel.cpp yakeGraphical.cpp \
	yakePhysical.cpp yakeVehicle.cpp yakeActor.cpp yakeModelLink.cpp \
	yakeModelMovableLink.cpp yakeNativeEngine.cpp yakeNativeVehiclePhysicalComponent.cpp \
	yakeNativeWheel.cpp yakeVehiclePhysicalComponent.cpp yakeVehicleSerializerXML.cpp \
	yakeVehicleSystem.cpp yakeVehicleTpl.cpp
