INCLUDES = -I$(top_srcdir)/. -I$(top_srcdir)/dependencies/ttl $(all_includes)
METASOURCES = AUTO
lib_LTLIBRARIES =  libyappEvent.la
libyappEvent_la_SOURCES =  yakeMessageId.cpp yakeMessageInstance.cpp yakeMessageManager.cpp yakeParamHolder.cpp
libyappEvent_la_LIBADD = $(top_builddir)/src/yake/base/libyakeBase.la
